--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,13 @@
 # misc
 .DS_Store
 *.pem
+resume
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+puck-db.json
 
 # local env files
 .env.local
