--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@measured/puck-plugin-heading-analyzer": "^0.20.2",
     "classnames": "^2.3.2",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.12.0",
     "next": "^15.2.4",
     "rc-footer": "^0.6.8",
     "react": "^19.0.0",
